data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_563.wast
;; 4. **Test Name: Nested Infinite Loops**    - **Description**: Create nested loops where the inner loop always branches back to itself, causing the outer loop to never complete its first iteration.    - **Constraint Checked**: Nested loop handling and correct validation of multiple levels of loop re-evaluation.    - **Infinite Loop Relation**: Continuous execution of the inner loop prevents exiting.

(assert_invalid
  (module
    (func (loop (result i32)
           (loop (br 1))
         )
         (i32.const 0)
    )
  )
  "type mismatch"
)